--- a/BigPlanetTracks/res/values/arrays.xml
+++ b/BigPlanetTracks/res/values/arrays.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string-array name="PostMapZoom">
+    <string-array name="MapMagnification">
         <item>1.0</item>
         <item>1.5</item>
         <item>2.0</item>
